# Umbvid

./: Cargo.toml  body.json  gen.json
backend/src/: auth.rs  main.rs
frontend/src/: App.tsx  types.ts
frontend/src/api/: auth.ts  client.ts  jobs.ts
frontend/src/components/: Gallery.tsx  JobCard.tsx  PromptForm.tsx
frontend/src/context/: authcontext.tsx
frontend/src/pages/: LoginPage.tsx  SignupPage.tsx
src/: config.rs  db.rs  errors.rs  jobs.rs  main.rs  openai_client.rs  r2.rs  users.rs
